# github-get-agentsmd

./: .gitignore  AGENTS.md  README.md  config.yaml  get_agentsmd.py  get_repos.py  pyproject.toml
.github/: copilot-instructions.md
